--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <section class="contact" id="milestone">
         <div class="max-width">
             <h2 class="title">Milestones that made AI what It is today</h2>
-         <img src="image-1.jpg" alt="">
+         <img src="aiop.png" alt="">
 		 <h1>We still haven't stopped innovating, AI at its recent stage is far more developed and avanced than one could have ever thought of during its inception. AI has been a vital component of our fight against Covid-19 and is also currently being used in vaccine development</h1>
 <img src="22.jpg" style="text-align:center;" alt="">
         </div>
