--- a/index.html
+++ b/index.html
@@ -18,22 +18,24 @@
     <div class="scroll-up-btn">
         <i class="fas fa-angle-up"></i>
     </div>
-    <nav class="navbar">
-        <div class="max-width">
-            <div class="logo"><a href="#">INFO<span>@AI</span></a></div>
-            <ul class="menu">
-                <li><a href="#home" class="menu-btn">Home</a></li>
-                <li><a href="#about" class="menu-btn">About</a></li>
-                <li><a href="#breakthrough" class="menu-btn"> Breakthroughs</a></li>
-                <li><a href="#uses" class="menu-btn">Uses</a></li>
-                <li><a href="#ai images" class="menu-btn">How Real Can AI Be?</a></li>
-                <li><a href="#milestone" class="menu-btn">Milestones</a></li>
-            </ul>
-            <div class="menu-btn">
-                <i class="fas fa-bars"></i>
-            </div>
-        </div>
-    </nav>
+   <nav>
+	<input id="nav-toggle" type="checkbox">
+	<div class="logo">INFO<strong>@AI</strong></div>
+	<ul class="links">
+		<li><a href="#home">Home</a></li>
+		<li><a href="#about">About</a></li>
+		<li><a href="#breakthrough">Breakthroughs</a></li>
+		<li><a href="#uses">Uses</a></li>
+		<li><a href="#ai images">How Real Can AI be?</a></li>
+		<li><a href="#milestone">Milestones</a></li>
+	</ul>
+	<label for="nav-toggle" class="icon-burger">
+		<div class="line"></div>
+		<div class="line"></div>
+		<div class="line"></div>
+	</label>
+</nav>
+
 
    
     <section class="home" id="home">
