--- a/index.html
+++ b/index.html
@@ -67,32 +67,49 @@
     </section>
 
     
-    <section class="services" id="breakthrough">
+ <section class="services" id="breakthrough">
         <div class="max-width">
             <h2 class="title"></h2>
             <div class="serv-content">
-                <div class="card">
-                    <div class="box">
-                        <div class="text">AI JUDGE</div>
-                        <p>China develops first AI judge that can decide people's innocence with 97% accuracy</p>
-                    </div>
-                </div>
-                <div class="card1">
-                    <div class="box">
-                        <div class="text">SOPHIA THE HUMANOID</div>
-                        <p>You most probably would have heard about sophia, she is the world's first humanoid robot, to be given a citizenship. She has evolved so much that recently she was heard saying that she wants to start a family of her own</p>
-                    </div>
-                </div>
-                <div class="card2">
-                    <div class="box">
-                        <div class="text">Drones and AI</div>
-                        <p>As various companies have started using drones for delivery of products including amazon. Artificial Intelligence has reportedbly been used to help drones detect and avoid aerial obstacles</p>
-                    </div>
-                </div>
+			
+<div class="slideshow-container">
+
+  
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <img src="b.jpg" style="width:100%">
+    <div class="text">Drones And AI <br> As various companies have started using drones for delivery of products including amazon. Artificial Intelligence has reportedbly been used to help drones detect and avoid aerial obstacles</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img src="op.jpg" style="width:100%">
+    <div class="text">AI JUDGE <br> China develops the worlds first AI judge which can listen to testimonies and decide who is innocent with 97% accuracy</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+    <img src="s.jpg" style="width:100%">
+    <div class="text">Sophia The Humanoid Robot <br> You most probably must have heard about Sophia, she is the worlds first humaoid robot to be given a citizenship by a country(Saudi Arabia). She has evolved so much that she was recently heard saying that she wants to start a family of her own</div>
+  </div>
+
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+</div>
+			
+			
                </div>
-            </div>
-        </div>
+			   </div>
     </section>
+
 
     <!-- skills section start -->
     <section class="skills" id="uses">
