--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <img src="a1.png" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">Who is the father of <span class="typing-2"></span></div>
+                    <div class="text"> <span class="typing-2"></span></div>
                     <p>John Mccarthy(September 4, 1927 – October 24, 2011), who is known for founding the famous programming language lisp, coined the term AI. He defined the term AI as  "the science and engineering of making intelligent machines." Other names for the field have been proposed, such as computational intelligence, synthetic intelligence or computational rationality. The term artificial intelligence is also used to describe a property of machines or programs: the intelligence that the system demonstrates.</p>
                     <a href="https://www.sciencedaily.com/terms/artificial_intelligence.htm"target="_blank">Read More</a>
                 </div>
@@ -117,7 +117,7 @@
             <h2 class="title">AI and Its use In every Domain</h2>
             <div class="skills-content">
                 <div class="column left">
-                    <div class="text">Why is Artificial Intelligence Important?</div>
+                    <div class="text"></div>
                     <p>Today, the amount of data that is generated, by both humans and machines, far outpaces humans’ ability to absorb, interpret, and make complex decisions based on that data. Artificial intelligence forms the basis for all computer learning and is the future of all complex decision making. As an example, most humans can figure out how to not lose at tic-tac-toe (noughts and crosses), even though there are 255,168 unique moves, of which 46,080 end in a draw. Far fewer folks would be considered grand champions of checkers, with more than 500 x 1018, or 500 quintillion, different potential moves. Computers are extremely efficient at calculating these combinations and permutations to arrive at the best decision. AI (and its logical evolution of machine learning) and deep learning are the foundational future of business decision making.</p>
                     <a href="https://www.netapp.com/artificial-intelligence/what-is-artificial-intelligence/" target="_blank">Read more</a>
 			<h4 style=" color: blue;"> AI and The Government</h4>
@@ -146,35 +146,35 @@
 				
                     <div class="box">
                         <img src="ai.jpg" alt="">
-                        <div class="text">AI generated face</div>
+                        <div class="text"></div>
                         <p>This person doesen't exist and has been created through AI</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="ai1.png" alt="">
-                        <div class="text">AI generated face</div>
+                        <div class="text"></div>
                         <p>This person does not exist and has been created through AI</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="ai2.png" alt="">
-                        <div class="text">AI generated face</div>
+                        <div class="text"></div>
                        <p>This person does not exist and has been created through AI</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="ai3.png" alt="">
-                        <div class="text">AI generated face</div>
+                        <div class="text"></div>
                         <p>This person does not exist and has been created through AI</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="ai4.jpg" alt="">
-                        <div class="text">AI generated face</div>
+                        <div class="text"></div>
                         <p>This person does not exist and has been created through AI</p>
                     </div>
                 </div>
