--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
     
     <footer>
-        <span>Created With <span class="fa fa-heart"></span> By <a href="https://dpsnoida.co.in/">DPS NOIDA</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+        <span>Created With <span class="fa fa-heart"></span> By <a href="https://dpsnoida.co.in/">DPS NOIDA</a></span>
     </footer>
 
     <script src="script.js"></script>
